# ChangeLog for sys-kernel/mm-sources
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.194 2004/10/11 14:49:25 lostlogic Exp $

*mm-sources-2.6.9_rc4-r1 (11 Oct 2004)

  11 Oct 2004; Brandon Low <lostlogic@gentoo.org>
  +mm-sources-2.6.9_rc4-r1.ebuild:
  Bump

*mm-sources-2.6.9_rc3-r3 (07 Oct 2004)

  07 Oct 2004; Brandon Low <lostlogic@gentoo.org>
  +mm-sources-2.6.9_rc3-r3.ebuild:
  bump

*mm-sources-2.6.9_rc3-r2 (05 Oct 2004)

  05 Oct 2004; Brandon Low <lostlogic@gentoo.org>
  +mm-sources-2.6.9_rc3-r2.ebuild:
  Bump

*mm-sources-2.6.9_rc3-r1 (02 Oct 2004)

  02 Oct 2004; Travis Tilley <lv@gentoo.org> +mm-sources-2.6.9_rc3-r1.ebuild:
  new release

  02 Oct 2004; Travis Tilley <lv@gentoo.org> -mm-sources-2.6.8.1-r1.ebuild,
  -mm-sources-2.6.8.1-r2.ebuild, -mm-sources-2.6.8.1-r3.ebuild,
  -mm-sources-2.6.9_rc1-r1.ebuild, -mm-sources-2.6.9_rc1-r2.ebuild,
  -mm-sources-2.6.9_rc1-r3.ebuild, -mm-sources-2.6.9_rc1-r4.ebuild,
  -mm-sources-2.6.9_rc1-r5.ebuild:
  cleanup

*mm-sources-2.6.9_rc2-r4 (26 Sep 2004)

  26 Sep 2004; Robin H. Johnson <robbat2@gentoo.org>
  +mm-sources-2.6.9_rc2-r4.ebuild:
  Version bump again.

*mm-sources-2.6.9_rc2-r3 (25 Sep 2004)

  25 Sep 2004; Travis Tilley <lv@gentoo.org> +mm-sources-2.6.9_rc2-r3.ebuild:
  version bump

*mm-sources-2.6.9_rc2-r2 (23 Sep 2004)

  23 Sep 2004; Travis Tilley <lv@gentoo.org> +mm-sources-2.6.9_rc2-r2.ebuild:
  new release

*mm-sources-2.6.9_rc2-r1 (17 Sep 2004)

  17 Sep 2004; Travis Tilley <lv@gentoo.org> +mm-sources-2.6.9_rc2-r1.ebuild:
  bump

  13 Sep 2004; Brandon Low <lostlogic@gentoo.org>
  -mm-sources-2.6.8_rc2-r2.ebuild, -mm-sources-2.6.8_rc3-r2.ebuild,
  -mm-sources-2.6.8_rc4-r1.ebuild:
  Clean some stuff up

*mm-sources-2.6.9_rc1-r5 (13 Sep 2004)

  13 Sep 2004; Brandon Low <lostlogic@gentoo.org>
  +mm-sources-2.6.9_rc1-r5.ebuild:
  Bump

*mm-sources-2.6.9_rc1-r4 (07 Sep 2004)
