@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.194 2004/10/11 14:49:25 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.195 2004/10/22 20:43:41 lostlogic Exp $
+
+*mm-sources-2.6.9-r1 (22 Oct 2004)
+
+  22 Oct 2004; Brandon Low <lostlogic@gentoo.org>
+  +mm-sources-2.6.9-r1.ebuild:
+  Bump
 
 *mm-sources-2.6.9_rc4-r1 (11 Oct 2004)
 
